[tool.poetry]
name = "shutterstock-scraper"
version = "0.1.0"
description = ""
authors = ["zaidejaz <zaidejaz521@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyppeteer = "^2.0.0"
pyppeteer-stealth = "^2.7.4"
python-dotenv = "^1.0.1"
2captcha-python = "^1.2.8"
selenium = "^4.8.0"
selenium-recaptcha-solver = "^1.9.0"
webdriver-manager = "^4.0.1"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
